<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/empMasterMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emp_master_menu"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/image2"
        android:layout_below="@+id/empMasterMenu" />

    <Button
        android:id="@+id/addEmpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_emp"
        android:layout_centerInParent="true"
        app:cornerRadius="25dp"
        android:layout_below="@+id/imageView3" />

    <Button
        android:id="@+id/displayEmpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/display_emp_details"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:cornerRadius="25dp"
        android:layout_below="@+id/addEmpBtn" />

    <Button
        android:id="@+id/editEmpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayEmpBtn"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="25dp"
        android:text="@string/edit_emp_details" />

    <Button
        android:id="@+id/deleteEmpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/del_emp_details"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:cornerRadius="25dp"
        android:layout_below="@+id/editEmpBtn" />

    <Button
        android:id="@+id/backToMainMenuBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/back_to_main_menu"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:cornerRadius="25dp"
        android:layout_below="@+id/deleteEmpBtn" />



</RelativeLayout>